--- a/facebook/frontend/src/components/header/style.css
+++ b/facebook/frontend/src/components/header/style.css
@@ -60,7 +60,7 @@ header {
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 125px;
+  width: 330px;
   height: 50px;
   border-radius: 10px;
   cursor: pointer;
@@ -68,15 +68,6 @@ header {
 }
 .middle_icon:nth-child(2) {
   transform: translateX(-4px);
-}
-.middle_icon:nth-child(3) {
-  transform: translateX(-3px);
-}
-.middle_icon:nth-child(4) {
-  transform: translateX(-5px);
-}
-.middle_icon:nth-child(5) {
-  transform: translateX(-5px);
 }
 .active {
   border-bottom: 3px solid var(--blue-color);
@@ -141,16 +132,6 @@ header {
   margin-right: 8px;
   background: var(--bg-third);
   cursor: pointer;
-}
-.right_notification {
-  position: absolute;
-  top: -6px;
-  right: -5px;
-  background: #e41e3f;
-  border-radius: 50px;
-  padding: 1px 6px;
-  font-size: 13px;
-  color: #fff;
 }
 /*---Header right-----*/
 
@@ -504,12 +485,12 @@ header {
 /*---responsive----------*/
 @media (max-width: 1295px) {
   .middle_icon {
-    width: 90px;
+    width: 250px;
   }
 }
 @media (max-width: 1130px) {
   .middle_icon {
-    width: 70px;
+    width: 150px;
   }
 }
 @media (max-width: 1040px) {
@@ -535,21 +516,13 @@ header {
   .header_middle {
     transform: translateX(-30%);
   }
-  .middle_icon:nth-child(5) {
-    display: none;
+  .middle_icon {
+    width: 100px;
   }
 }
 @media (max-width: 770px) {
   .header_middle {
     transform: translateX(-37%);
-  }
-  .middle_icon:nth-child(4) {
-    display: none;
-  }
-}
-@media (max-width: 720px) {
-  .middle_icon:nth-child(3) {
-    display: none;
   }
 }
 /*---responsive----------*/
@@ -565,8 +538,8 @@ header {
   }
 }
 @media (max-width: 550px) {
-  .middle_icon:nth-child(1) {
-    display: none;
+  .middle_icon {
+    width: 40px;
   }
   .header_middle {
     transform: translateX(-20%);
@@ -591,9 +564,6 @@ header {
   }
 }
 @media (max-width: 400px) {
-  .header_right .circle_icon:nth-child(3) {
-    display: none;
-  }
   .mmenu {
     width: 290px;
   }
