--- a/facebook/frontend/src/components/home/right/style.css
+++ b/facebook/frontend/src/components/home/right/style.css
@@ -10,7 +10,7 @@
   width: 17vw;
   margin: 6px 2px 0 12px;
 }
-.contacts_header {
+.project_header {
   position: relative;
   display: flex;
   align-items: center;
@@ -20,14 +20,6 @@
   color: var(--color-secondary);
 }
 .contacts_header_right {
-  display: flex;
-  align-items: center;
-  gap: 6px;
-  position: absolute;
-  right: -9px;
-  top: 7px;
-}
-.contact_circle {
   width: 35px;
   height: 35px;
   border-radius: 50%;
@@ -35,37 +27,6 @@
   align-items: center;
   justify-content: center;
   cursor: pointer;
-}
-.contact_circle:nth-child(1) {
-  margin-right: -1px;
-}
-.contact_circle:nth-child(2) {
-  margin-right: 1px;
-}
-.contact_circle:nth-child(3) {
-  margin-top: -1px;
-}
-
-.contacts_list {
-  padding: 5px;
-}
-.contact {
-  display: flex;
-  align-items: center;
-  gap: 12px;
-  font-size: 14px;
-  padding: 5px;
-  border-radius: 10px;
-  cursor: pointer;
-  color: var(--color-primary);
-  font-weight: 600;
-}
-.contact_img img {
-  width: 36px;
-  height: 36px;
-  border-radius: 50%;
-  object-fit: cover;
-}
-.contact span {
-  transform: translateY(-5px);
+  position: absolute;
+  top: 7px;
 }
