--- a/facebook/frontend/src/pages/profile/style.css
+++ b/facebook/frontend/src/pages/profile/style.css
@@ -181,58 +181,11 @@
 .bottom_container {
   padding: 10px 2.2rem;
 }
-.pplumayknow_list {
-  display: flex;
-  gap: 5px;
-  align-items: center;
-  height: 240px;
-}
-.pplumayknow {
-  width: 100%;
-  height: 100%;
-  border-radius: 10px;
-  border: 3px solid var(--blue-color);
-  padding: 10px 15px;
-}
-.pplumayknow_header {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  font-weight: 600;
-  font-size: 16px;
-}
-.addfriendCard {
-  position: relative;
-  height: 100%;
-  width: 150px;
-  border-radius: 10px;
-  overflow: hidden;
-  background: var(--bg-primary);
-}
-.addfriend_imgsmall {
-  width: 100%;
-  height: 140px;
-}
-.addfriend_imgsmall img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-}
-.addfriend_infos {
-  padding: 10px;
-  text-align: center;
-  display: flex;
-  flex-direction: column;
-  gap: 5px;
-}
-.addfriend_name {
-  font-size: 16px;
-  font-weight: 600;
-}
+
 .light_blue_btn img {
   width: 20px;
 }
-.pplumayknow_list .light_blue_btn {
+.light_blue_btn {
   color: var(--blue-color);
 }
 .profile_grid {
@@ -444,9 +397,6 @@
   .profile_name {
     padding-bottom: 10px;
     flex-direction: column;
-  }
-  .pplumayknow {
-    display: none;
   }
   .profile_grid {
     grid-template-columns: 1fr;
