--- a/facebook/frontend/src/components/home/left/style.css
+++ b/facebook/frontend/src/components/home/left/style.css
@@ -104,7 +104,7 @@
 .shortcut_item span {
   margin-bottom: 3px;
 }
-.fb_copyright {
+.copyright {
   position: fixed;
   bottom: 14px;
   left: 10px;
@@ -112,7 +112,7 @@
   color: var(--color-secondary);
   width: 15vw;
 }
-.relative_fb_copyright {
+.relative_copyright {
   position: relative;
   width: 97%;
   margin-top: 2rem;
