--- a/facebook/frontend/src/index.css
+++ b/facebook/frontend/src/index.css
@@ -26,7 +26,7 @@ a {
   --dark-bg-third: #3a3b3c;
   --dark-color-primary: #242526;
   --dark-color-secondary: #b0b3b8;
-  --blue-color: #1876f2;
+  --blue-color: #51ae84;
   --green-color: #42b72a;
   --light-blue-color: #e7f3ff;
   --border-color: #ccced2;
