--- a/facebook/frontend/src/components/createPostPopup/style.css
+++ b/facebook/frontend/src/components/createPostPopup/style.css
@@ -115,11 +115,12 @@
   padding: 10px;
   border-radius: 10px;
   border: 3px solid var(--bg-forth);
+  justify-content: center;
 }
 .addto_text {
-  width: 50%;
   font-weight: 600;
   font-size: 14px;
+  cursor: pointer;
 }
 .post_header_right {
   width: 35px;
@@ -135,7 +136,7 @@
   padding: 10px;
   outline: none;
   border: none;
-  background: var(--blue-color);
+  background: var(--green-color);
   color: #fff;
   font-weight: 600;
   border-radius: 5px;
