--- a/facebook/frontend/src/components/home/left/style.css
+++ b/facebook/frontend/src/components/home/left/style.css
@@ -41,7 +41,7 @@
 .col_2 {
   position: relative;
   font-size: 12px;
-  color: var(--blue-color);
+  color: var(--green-color);
   margin-left: 9px;
   margin-top: 2px;
   font-weight: normal;
@@ -51,7 +51,7 @@
   width: 7px;
   height: 7px;
   border-radius: 50%;
-  background: var(--blue-color);
+  background: var(--green-color);
   position: absolute;
   left: -10px;
   bottom: 2px;
@@ -77,7 +77,7 @@
 }
 .edit_shortcut {
   font-size: 14px;
-  color: var(--blue-color);
+  color: var(--green-color);
   display: none;
 
   cursor: pointer;
