--- a/facebook/frontend/src/components/home/sendVerification/style.css
+++ b/facebook/frontend/src/components/home/sendVerification/style.css
@@ -9,7 +9,7 @@
   border-radius: 10px;
 }
 .send_verification a {
-  color: var(--blue-color);
+  color: var(--green-color);
   cursor: pointer;
 }
 .send_verification a:hover {
