--- a/facebook/frontend/src/components/intro/style.css
+++ b/facebook/frontend/src/components/intro/style.css
@@ -34,7 +34,7 @@
   background: var(--bg-secondary) !important;
 }
 .details_input:focus {
-  outline-color: var(--blue-color) !important;
+  outline-color: var(--green-color) !important;
   outline-offset: 1px !important;
 }
 .remaining {
@@ -86,7 +86,7 @@
   align-items: center;
   gap: 1rem;
   margin-top: 15px;
-  color: var(--blue-color);
+  color: var(--green-color);
   font-size: 14px;
   cursor: pointer;
 }
