--- a/facebook/frontend/src/components/post/style.css
+++ b/facebook/frontend/src/components/post/style.css
@@ -291,15 +291,14 @@
   color: var(--color-secondary);
   font-size: 15px;
 }
-.comments_count:hover,
-.share_count:hover {
+.comments_count:hover {
   cursor: pointer;
   text-decoration: underline;
 }
 .post_actions {
   position: relative;
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: repeat(2, 1fr);
   padding: 0 8px 5px 8px;
   border-top: 1px solid var(--bg-third);
   border-bottom: 1px solid var(--bg-third);
