--- a/facebook/frontend/src/pages/friends/style.css
+++ b/facebook/frontend/src/pages/friends/style.css
@@ -47,7 +47,7 @@
   display: none;
 }
 .see_link {
-  color: var(--blue-color);
+  color: var(--green-color);
   padding: 5px;
   cursor: pointer;
 }
