--- a/facebook/frontend/src/pages/login/style.css
+++ b/facebook/frontend/src/pages/login/style.css
@@ -39,7 +39,7 @@
   font-weight: 700;
 }
 .forgot_password {
-  color: var(--blue-color);
+  color: var(--green-color);
   font-size: 14px;
   cursor: pointer;
 }
@@ -52,7 +52,7 @@
   background: var(--bg-third);
 }
 .open_signup {
-  background: var(--green-color);
+  background: var(--green2-color);
   width: 70% !important;
   font-weight: 600 !important;
   font-size: 17px !important;
@@ -161,7 +161,7 @@
   color: var(--color-secondary);
 }
 .reg_infos span {
-  color: var(--blue-color);
+  color: var(--green-color);
 }
 .reg_btn_wrapper {
   width: 100%;
@@ -233,7 +233,7 @@
   color: #b94a48;
 }
 .success_text {
-  color: var(--green-color);
+  color: var(--green2-color);
 }
 /*----error and success styles -------*/
 
