--- a/facebook/frontend/src/pages/home/style.css
+++ b/facebook/frontend/src/pages/home/style.css
@@ -11,7 +11,7 @@
   transform: translateX(-50%);
 }
 @media (max-width: 1175px) {
-  .createPost,
+  .create_post,
   .post,
   .send_verification {
     width: 84%;
@@ -56,14 +56,14 @@
   .contact_circle {
     width: 20px;
   }
-  .createPost,
+  .create_post,
   .post,
   .send_verification {
     width: 100%;
   }
 }
 @media (max-width: 960px) {
-  .createPost,
+  .create_post,
   .post,
   .send_verification {
     width: 93%;
@@ -89,7 +89,7 @@
   .right_home {
     display: none;
   }
-  .createPost,
+  .create_post,
   .post,
   .send_verification {
     width: 110%;
@@ -114,28 +114,28 @@
     position: absolute;
     margin-left: 0;
   }
-  .createPost,
+  .create_post,
   .post,
   .send_verification {
     width: 100%;
   }
-  .createPost_icon {
+  .create_post_icon {
     font-size: 12px;
   }
   .open_post {
     font-size: 16px;
   }
-  .createPost_icon svg {
+  .create_post_icon svg {
     width: 20px;
   }
 }
 @media (max-width: 400px) {
-  .createPost,
+  .create_post,
   .post {
     margin-top: 1rem;
   }
   .home_middle,
-  .createPost,
+  .create_post,
   .post {
     width: 98%;
     margin: 1rem auto;
@@ -147,7 +147,7 @@
   .home_middle {
     margin: 56px auto;
   }
-  .createPost_body {
+  .create_post_body {
     padding: 5px 0;
   }
 }
