--- a/facebook/frontend/src/components/createPostPopup/style.css
+++ b/facebook/frontend/src/components/createPostPopup/style.css
@@ -1,4 +1,4 @@
-.postBox {
+.post_box {
   position: fixed;
   top: 50%;
   left: 50%;
@@ -10,7 +10,7 @@
   width: 500px;
   border-radius: 5px;
 }
-.box_header {
+.post_box_header {
   position: relative;
   display: flex;
   align-items: center;
@@ -20,31 +20,31 @@
   padding: 14px 15px 17px 15px;
   border-bottom: 1px solid var(--bg-third);
 }
-.postBox .small_circle {
+.post_box .small_circle {
   position: absolute;
   right: 16px;
   top: 12px;
 }
-.box_profile {
+.creater_profile {
   display: flex;
   gap: 12px;
   padding: 17px 17px 5px 17px;
 }
-.box_profile .box_profile_img {
+.creater_profile .creater_profile_img {
   width: 38px;
   height: 38px;
   border-radius: 50%;
   object-fit: cover;
 }
-.box_col {
+.create_column {
   transform: translateY(-7px);
 }
-.box_profile_name {
+.creater_profile_name {
   font-size: 14px;
   font-weight: 600;
   margin-bottom: 4px;
 }
-.box_privacy {
+.creater_privacy {
   display: flex;
   align-items: center;
   width: 81px;
@@ -55,7 +55,7 @@
   background: var(--bg-third);
   cursor: pointer;
 }
-.box_privacy span {
+.creater_privacy span {
   margin-bottom: 1px;
 }
 .flex_center {
@@ -65,7 +65,7 @@
   align-items: center;
   justify-content: center;
 }
-.post_input {
+.posts_input {
   position: relative;
   outline: none;
   border: none;
@@ -85,29 +85,29 @@
   overflow-y: visible;
   position: absolute;
 }
-.post_emojis_wrap {
+.post_wrap_emoji {
   position: relative;
   display: flex;
   align-items: flex-end;
   justify-content: space-between;
   padding: 10px 15px;
 }
-.post_emojis_wrap img {
+.post_wrap_emoji img {
   width: 39px;
   cursor: pointer;
 }
-.post_emojis_wrap i:hover {
+.post_wrap_emoji i:hover {
   filter: invert(80%);
 }
-.comment_emoji_picker {
+.comment_emojis {
   position: absolute;
   right: 0;
   bottom: 2.5rem;
 }
-.rlmove {
+.move_r {
   right: -7rem;
 }
-.addtoyourpost {
+.addtopost {
   display: flex;
   align-items: center;
   gap: 10px;
@@ -130,7 +130,7 @@
   cursor: pointer;
   border-radius: 50%;
 }
-.post_submit {
+.submit_post_btn {
   width: calc(100% - 18px);
   margin: 5px 10px;
   padding: 10px;
@@ -142,35 +142,35 @@
   border-radius: 5px;
   cursor: pointer;
 }
-.overflow_a {
+.overflow {
   max-height: 500px;
   overflow-y: auto;
   overflow-x: hidden;
 }
-.input2 {
+.input_withimg {
   position: relative;
   display: block;
   font-size: 15px;
   min-height: 15px !important;
 }
-.moveleft {
+.move_l {
   transform: translateX(-10px);
 }
-.movepicker2 {
+.move_picker {
   right: 1rem;
   top: 9.7rem;
   z-index: 9999;
 }
-.images_input {
+.img_input {
   display: flex;
 }
-.add_pics_wrap {
+.addimgs_wrap {
   margin: 10px 15px;
   padding: 10px;
   border: 1px solid var(--bg-third);
   border-radius: 10px;
 }
-.add_pics_inside1 {
+.addimgs_inside {
   position: relative;
   background: var(--bg-secondary);
   border-radius: 10px;
@@ -180,7 +180,7 @@
   place-items: center;
   cursor: pointer;
 }
-.add_col {
+.add_column {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -200,7 +200,7 @@
   cursor: pointer;
   z-index: 99;
 }
-.add_circle {
+.add_small_circle {
   width: 42px;
   height: 42px;
   border-radius: 50%;
@@ -209,37 +209,13 @@
   display: grid;
   place-items: center;
 }
-.add_col span:first-of-type {
+.add_column span:first-of-type {
   font-size: 15px;
   font-weight: 600;
 }
-.add_col span:last-of-type {
+.add_column span:last-of-type {
   font-size: 12px;
   color: var(--color-secondary);
-}
-.add_pics_inside2 {
-  position: relative;
-  margin-top: 10px;
-  display: flex;
-  align-items: center;
-  gap: 10px;
-  background: var(--bg-secondary);
-  padding: 10px;
-  border-radius: 10px;
-}
-.mobile_text {
-  font-size: 12px;
-  font-weight: 600;
-}
-.addphone_btn {
-  background: var(--bg-third);
-  font-weight: 600;
-  padding: 10px 15px;
-  border-radius: 10px;
-  font-size: 14px;
-  position: absolute;
-  right: 10px;
-  cursor: pointer;
 }
 .p0 {
   padding: 0;
@@ -248,7 +224,7 @@
   cursor: default;
   overflow: hidden;
 }
-.preview_actions {
+.preview_add {
   position: absolute;
   left: 1rem;
   top: 1rem;
@@ -256,7 +232,7 @@
   gap: 1rem;
   display: none;
 }
-.preview_actions button {
+.preview_add button {
   outline: none;
   border: none;
   padding: 8px 10px;
@@ -271,29 +247,29 @@
   font-family: inherit;
   color: var(--color-primary);
 }
-.p0:hover .preview_actions {
+.p0:hover .preview_add {
   display: flex;
 }
-.preview1 {
+.preview_1 {
   width: 100%;
   height: 100%;
 }
-.preview1 img {
+.preview_1 img {
   width: 100%;
   height: 100%;
   object-fit: cover;
 }
-.preview2 {
+.preview_2 {
   height: 100%;
   display: flex;
   gap: 2px;
 }
-.preview2 img {
+.preview_2 img {
   width: 50%;
   height: 230px;
   object-fit: cover;
 }
-.preview3 {
+.preview_3 {
   height: 100%;
   width: 100%;
   display: grid;
@@ -301,53 +277,53 @@
   grid-template-rows: repeat(2, 1fr);
   gap: 2px;
 }
-.preview3 img {
+.preview_3 img {
   width: 100%;
   height: 200px;
   object-fit: cover;
 }
-.preview3 img:nth-child(1) {
+.preview_3 img:nth-child(1) {
   grid-column: 1/3;
 }
-.preview4 {
+.preview_4 {
   height: 100%;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: repeat(2, 1fr);
   gap: 2px;
 }
-.preview4 img {
+.preview_4 img {
   width: 100%;
   height: 200px;
   object-fit: cover;
 }
-.preview4 img:nth-child(1) {
+.preview_4 img:nth-child(1) {
   grid-column: 1/4;
 }
-.preview5 {
+.preview_5 {
   height: 100%;
   display: grid;
   grid-template-columns: repeat(6, 1fr);
   grid-template-rows: repeat(2, 1fr);
   gap: 2px;
 }
-.preview5 img {
+.preview_5 img {
   width: 100%;
   height: 200px;
   object-fit: cover;
   grid-column: auto / span 2;
 }
-.preview5 img:nth-child(1),
-.preview5 img:nth-child(2) {
+.preview_5 img:nth-child(1),
+.preview_5 img:nth-child(2) {
   grid-column: auto / span 3;
 }
-.preview6 {
+.preview_6 {
   height: 100%;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   gap: 2px;
 }
-.preview6 img {
+.preview_6 img {
   width: 100%;
   height: 200px;
   object-fit: cover;
@@ -355,18 +331,18 @@
 .singular_grid img:nth-child(1) {
   grid-column: 1/3;
 }
-.post_backgrounds {
+.backgrounds {
   display: flex;
   align-items: center;
   gap: 5px;
 }
-.post_backgrounds img {
+.backgrounds img {
   width: 35px;
   height: 35px;
   object-fit: cover;
   border-radius: 10px;
 }
-.no_bg {
+.no_background {
   background: var(--bg-secondary);
   width: 35px;
   height: 35px;
@@ -385,7 +361,7 @@
 }
 
 /*----post error----*/
-.postError {
+.createPostError {
   position: absolute;
   top: 0;
   right: 0;
@@ -403,7 +379,7 @@
   border-radius: 5px;
   padding: 3rem;
 }
-.postError_error {
+.createPostError_err {
   width: 75%;
   font-weight: 600;
 }
@@ -418,38 +394,35 @@
   }
 }
 @media (max-width: 735px) {
-  .rlmove {
+  .move_r {
     right: 10px;
   }
 }
 @media (max-width: 550px) {
-  .postBox {
+  .post_box {
     width: 96%;
   }
 
-  .post_backgrounds {
+  .backgrounds {
     width: 80%;
     overflow-x: auto;
   }
-  .post_backgrounds img {
+  .backgrounds img {
     width: 30px;
     height: 30px;
   }
 }
 @media (max-width: 405px) {
-  .preview_actions {
+  .preview_add {
     flex-direction: column;
     gap: 2px;
   }
-  .mobile_text {
-    width: 50%;
-  }
 }
 @media (max-width: 380px) {
-  .post_input {
+  .posts_input {
     font-size: 17px;
   }
-  .addtoyourpost {
+  .addtopost {
     justify-content: center;
   }
   .addto_text {
