--- a/facebook/frontend/src/components/home/right/style.css
+++ b/facebook/frontend/src/components/home/right/style.css
@@ -1,4 +1,4 @@
-.right_home {
+.home_right {
   position: fixed;
   left: 80.7vw;
   top: 4rem;
@@ -18,15 +18,4 @@
   padding: 12px 0 7px 10px;
   font-weight: 600;
   color: var(--color-secondary);
-}
-.contacts_header_right {
-  width: 35px;
-  height: 35px;
-  border-radius: 50%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  cursor: pointer;
-  position: absolute;
-  top: 7px;
 }
