--- a/facebook/frontend/src/components/post/style.css
+++ b/facebook/frontend/src/components/post/style.css
@@ -1,4 +1,4 @@
-.posts {
+.feed {
   margin-top: 1rem;
   width: 100%;
 }
@@ -558,7 +558,7 @@
   }
 }
 @media (max-width: 400px) {
-  .posts {
+  .feed {
     width: 100%;
     margin: 0 auto;
   }
