--- a/facebook/frontend/src/components/inputs/signupInput/style.css
+++ b/facebook/frontend/src/components/inputs/signupInput/style.css
@@ -1,16 +1,16 @@
-.register_input_wrap {
+.signup_input {
   width: 100% !important;
 }
-.register_input_wrap input {
+.signup_input input {
   background: var(--bg-secondary);
 }
-.register_input_wrap .input_error {
+.signup_input .input_error {
   max-width: 300px;
 }
-.register_input_wrap .error_arrow_bottom {
+.signup_input .error_bottom {
   transform: translateY(1px);
 }
-.error_arrow_right {
+.error_right {
   border-right: 10px solid #b94a48;
   border-top: 10px solid transparent;
   border-bottom: 10px solid transparent;
@@ -19,7 +19,7 @@
   top: 14px;
 }
 @media (min-width: 539px) {
-  .register_input_wrap .input_error {
+  .signup_input .input_error {
     max-width: 100%;
   }
 }
