--- a/facebook/frontend/src/pages/login/style.css
+++ b/facebook/frontend/src/pages/login/style.css
@@ -1,4 +1,4 @@
-/*-------login-----*/
+/*-----Login-----*/
 .login_wrapper {
   background: var(--bg-secondary);
 }
@@ -7,17 +7,17 @@
   height: 78vh;
   color: var(--color-primary);
 }
-.login_1 {
+.login_logo {
   width: 300px;
   margin: 0 auto;
 }
-.login_1 span {
+.login_logo span {
   font-size: 20px;
 }
-.login_2 {
+.login_form {
   text-align: center;
 }
-.login_2_wrap {
+.login_form_wrap {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -32,7 +32,7 @@
   user-select: none;
   border-radius: 10px;
 }
-.login_2_wrap button {
+.login_form_wrap button {
   width: 100%;
   height: 50px;
   font-size: 17px;
@@ -46,25 +46,25 @@
 .forgot_password:hover {
   text-decoration: underline;
 }
-.sign_splitter {
+.signup_splitter {
   width: 100%;
   height: 1px;
   background: var(--bg-third);
 }
-.open_signup {
+.signup_popup {
   background: var(--green2-color);
   width: 70% !important;
   font-weight: 600 !important;
   font-size: 17px !important;
   margin-top: 1rem;
 }
-.sign_extra {
+.extra {
   font-size: 15px;
 }
-/*-------login-----*/
+/*-----Login-----*/
 
-/*-----Register---------*/
-.register {
+/*-----Sign Up-----*/
+.signup {
   position: absolute;
   top: 50%;
   left: 50%;
@@ -78,7 +78,7 @@
   height: fit-content;
   color: var(--color-primary);
 }
-.register_header {
+.signup_header {
   position: relative;
   display: flex;
   flex-direction: column;
@@ -86,48 +86,48 @@
   padding-bottom: 10px;
   border-bottom: 1px solid var(--bg-third);
 }
-.register_header i {
+.signup_header i {
   position: absolute;
   right: 0;
   cursor: pointer;
 }
-.register_header span:first-of-type {
+.signup_header span:first-of-type {
   font-weight: 700;
   font-size: 32px;
 }
-.register_header span:last-of-type {
+.signup_header span:last-of-type {
   font-size: 15px;
   color: var(--color-secondary);
 }
-.register_form {
+.signup_form {
   width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
 }
-.reg_line {
+.signup_line {
   padding: 7px 0;
   display: flex;
   flex-direction: column;
   gap: 10px;
 }
-.reg_col {
+.signup_col {
   position: relative;
   align-self: flex-start;
   margin-bottom: 10px;
   padding: 0 10px;
 }
-.reg_line_header {
+.signup_line_header {
   display: flex;
   align-items: center;
   gap: 2px;
   font-size: 13px;
   color: var(--color-secondary);
 }
-.reg_line_header i {
+.signup_line_header i {
   margin-top: 3px;
 }
-.reg_grid {
+.signup_grid {
   margin-top: 5px;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
@@ -135,7 +135,7 @@
   height: 35px;
   width: 100%;
 }
-.reg_grid select {
+.signup_grid select {
   width: 90px;
   font-size: 16px;
   color: var(--color-primary);
@@ -143,7 +143,7 @@
   border-radius: 5px;
   cursor: pointer;
 }
-.reg_grid label {
+.signup_grid label {
   width: 90px;
   display: flex;
   align-items: center;
@@ -155,24 +155,24 @@
   border: 1px solid var(--color-secondary);
   padding: 0 10px;
 }
-.reg_infos {
+.signup_info {
   font-size: 11px;
   margin-top: 10px;
   color: var(--color-secondary);
 }
-.reg_infos span {
+.signup_info span {
   color: var(--green-color);
 }
-.reg_btn_wrapper {
+.signup_button {
   width: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
   margin: 20px 0 10px 0;
 }
-/*-----Register---------*/
+/*-----Sign Up-----*/
 
-/*----Footer------*/
+/*-----Footer-----*/
 .login_footer {
   height: 22vh;
   background: var(--bg-primary);
@@ -194,19 +194,6 @@
 .login_footer_wrap a:hover {
   text-decoration: underline;
 }
-.footer_square {
-  background: var(--bg-secondary);
-  height: 19px;
-  width: 30px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  border: 1px solid var(--bg-third);
-}
-.footer_square i {
-  transform: scale(0.8);
-  -webkit-filter: invert(40%);
-}
 .footer_splitter {
   width: 100%;
   height: 1px;
@@ -214,48 +201,48 @@
   margin: 10px auto;
   max-width: 900px;
 }
-/*----Footer------*/
+/*-----Footer-----*/
 
-/*----dob and gender errors-----*/
-.reg_grid .input_error {
+/*-----DOB and gender errors-----*/
+.signup_grid .input_error {
   width: 300px;
   position: absolute;
   top: 70px;
 }
-.input_error_select_large {
+.large_input_err {
   left: -97%;
   top: 15px !important;
 }
-/*----dob and gender errors-----*/
+/*-----DOB and gender errors-----*/
 
-/*----error and success styles -------*/
-.error_text {
+/*-----error and success messages-----*/
+.error_msg {
   color: #b94a48;
 }
-.success_text {
+.success_msg {
   color: var(--green2-color);
 }
-/*----error and success styles -------*/
+/*-----error and success messages-----*/
 
-/*----Media queries--------------*/
+/*-----Responsive-----*/
 @media (min-width: 539px) {
   .login_footer_wrap {
     max-width: 520px;
   }
-  .register {
+  .signup {
     width: 400px;
   }
-  .reg_line {
+  .signup_line {
     flex-direction: row;
   }
-  .reg_grid select,
-  .reg_grid label {
+  .signup_grid select,
+  .signup_grid label {
     width: 110px;
   }
-  .reg_grid .input_error {
+  .signup_grid .input_error {
     width: 350px;
   }
-  .login_1 img {
+  .login_logo img {
     width: 350px !important;
     margin-left: -1.7rem;
     padding-top: 50px;
@@ -265,7 +252,7 @@
   .login_footer_wrap {
     max-width: 650px;
   }
-  .login_1 img {
+  .login_logo img {
     width: 350px !important;
     margin-left: -1.7rem;
     padding-top: 50px;
@@ -278,19 +265,19 @@
     max-width: 1000px;
     margin: 0 auto;
   }
-  .login_1 {
+  .login_logo {
     display: flex;
     flex-direction: column;
     width: 50%;
     margin-bottom: 15vh;
   }
-  .login_1 span {
+  .login_logo span {
     font-size: 28px;
   }
-  .login_2_wrap {
+  .login_form_wrap {
     width: 400px;
   }
-  .input_wrap {
+  .login_input {
     width: 360px !important;
   }
   .login_footer_wrap {
@@ -298,10 +285,10 @@
   }
 }
 @media (max-width: 540px) {
-  .login_1 img {
+  .login_logo img {
     width: 350px !important;
     margin-left: -1.7rem;
     padding-top: 50px;
   }
 }
-/*----Media queries--------------*/
+/*-----Responsive-----*/
