--- a/facebook/frontend/src/pages/reset/style.css
+++ b/facebook/frontend/src/pages/reset/style.css
@@ -41,13 +41,13 @@
   height: fit-content !important;
 }
 
-.reset_form_header {
+.reset_header {
   padding: 15px;
   font-weight: 600;
   font-size: 24px;
   border-bottom: 1px solid var(--bg-third);
 }
-.reset_form_text {
+.reset_text {
   padding: 15px;
   font-size: 17px;
 }
@@ -57,7 +57,7 @@
   align-items: center;
   row-gap: 10px;
 }
-.reset_form_btns {
+.reset_buttons {
   display: flex;
   align-self: flex-end;
   gap: 10px;
@@ -68,8 +68,8 @@
   padding-left: 65%;
   border-top: 1px solid var(--bg-third);
 }
-.reset_form_btns a,
-.reset_form_btns button {
+.reset_buttons a,
+.reset_buttons button {
   width: 90px;
 }
 .reset_grid {
@@ -111,16 +111,16 @@
 .dynamic_height {
   height: 430px;
 }
-.conf_password_error {
+.confirm_password_err {
   transform: translateY(62px) !important;
 }
-.conf_password_error .error_arrow_left {
+.confirm_password_err .error_left {
   transform: rotate(180deg) translateY(65px);
 }
-.err_res_password {
+.error_password_res {
   transform: translateY(-16px) !important;
 }
-.err_res_password .error_arrow_left {
+.error_password_res .error_left {
   transform: translateY(19px);
 }
 /*----Queries----*/
@@ -138,12 +138,12 @@
   .reset_form .error_icon {
     right: 20px;
   }
-  .reset_form_btns {
+  .reset_buttons {
     padding-left: 40% !important;
   }
 }
 @media (max-width: 450px) {
-  .reset_form_btns {
+  .reset_buttons {
     padding-left: 50%;
   }
 }
@@ -157,7 +157,7 @@
   .dynamic_height {
     height: 330px;
   }
-  .reset_form_btns {
+  .reset_buttons {
     padding-left: 65%;
   }
 }
@@ -168,7 +168,7 @@
     top: -60px;
     width: 100%;
   }
-  .reset_form .error_arrow_left {
+  .reset_form .error_left {
     border-top: 10px solid #b94a48;
     border-right: 10px solid transparent;
     border-left: 10px solid transparent;
@@ -179,7 +179,7 @@
   }
 }
 @media (min-width: 1050px) {
-  .reset_form .input_error_desktop {
+  .reset_form .fullscreen_input_error {
     width: 320px;
     left: -92%;
   }
